--- a/src/WebApi/PubLink.WebApi.csproj
+++ b/src/WebApi/PubLink.WebApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>68d5f2d1-23f4-4d6f-97c9-6acbc3d0674a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
